# rlm-tools-bsl

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml  reinstall-service.ps1  simple-install-from-pip.sh  simple-install.ps1  simple-install.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish-testpypi.yml  release.yml
benchmarks/: run_benchmark.py
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  ENV_REFERENCE.md  FAQ.md  HELPERS.md  INDEXING.md  INSTALL.md  MODULE_MAP.md  PROJECT_REGISTRY.md  QUICKSTART.md  benchmarks.md  full_analysis_prompt.md
evals/: conftest.py  metrics.py  test_comparative.py  test_correctness.py
src/rlm_tools/: helpers.py  sandbox.py  server.py
src/rlm_tools_bsl/: _service_linux.py  _service_win.py  bsl_helpers.py  bsl_index.py  bsl_knowledge.py  bsl_xml_parsers.py  cache.py  cli.py  extension_detector.py  format_detector.py  helpers.py  llm_bridge.py  projects.py  sandbox.py  (+3 more)
tests/: conftest.py  test_bsl_helpers.py  test_bsl_index.py  test_bsl_index_integration.py  test_bsl_knowledge.py  test_cache_cleanup.py  test_category_aliases.py  test_cli.py  test_config.py  test_extension_detector.py  test_extension_overrides.py  test_file_paths.py  test_form_parsers.py  test_help_recipes.py  test_helpers.py  test_llm_bridge.py  test_object_synonyms.py  test_prefilter_limit.py  test_projects.py  test_regions_headers.py  test_sandbox.py  test_search_unified.py  test_server.py  test_session.py  test_strategy_examples.py
