[project]
name = "rlm-tools"
version = "0.1.0"
description = "MCP server providing a persistent Python sandbox for token-efficient codebase exploration across MCP clients"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "anthropic>=0.40.0",
]

[project.scripts]
rlm-tools = "rlm_tools.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_tools"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/stefanoshea/rlm-tools"
Repository = "https://github.com/stefanoshea/rlm-tools"
Issues = "https://github.com/stefanoshea/rlm-tools/issues"
